Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
============================
HYPERMAIL VERSION 2.4.0:
============================

2018-11-04 Bill Shannon
	* string.c
	i18n_convstring(): fix usage problems with iconv

2018-10-12 Jose Kahan
	* setup.c
	PreConfig(): removed a 64-bit warning

	* hypermail.c
	main(): if the en_US locale is not available, try en_US.UTF-8

2018-10-11 Jose Kahan

	* string.c
	parseemail(): for some reason if a ',' char was concatenaned to an
	email address, it was being parsed as part of the email username.

2018-10-10 Jose Kahan

	* string.c
	parseurl(): remove deprecated URLs. Improve support for URLs that don't
	have slashes following the 'protocol:' schema. Improve support for tel:
	URLs.

2018-10-09 Bill Shannon

	* string.c
	parseurl(): non-URL text can be misinterpreted as a URL, causing segfault
	Fixes issue #39

2018-10-08 Jose Kahan

	* print.c, string.c, proto.h
	The inreplyto_command could generate invalid links if the parser interpolated the
	in-reply-to from the subject. If a message's in-reply-to is interpolated,
	hypermail won't honor it anymore for that message.

2018-10-07 Jose Kahan

	* print.c printauthors(), printthreads(), printsubjects, printdates()
	Even if set_i18n was enabled, Indexes were written with mixed charsets
	instead of using utf-8 throughout.

	* configure.ac, Makefile.in, src/Makefile.in
	If the system has a recent libpcre, compile against it instead of using
	the bundled one. This check is done by default when launching configure.

	New configure options to allow to link against an external pcre library
	(--with-external-pcre) or to force the build and link against the
	bundled one (--enable-bundled-pcre).

	New configure option to allow to compile against a system libtrio
	(--enable-system-libtrio). Contrary to libpcre, it's not possible to find the
	version of libtrio so we cannot compile automatically against it.

2018-10-04 Jose Kahan

	* src/pcre
	Upgraded to upstream version 8.42
